--- a/style.css
+++ b/style.css
@@ -108,12 +108,14 @@ span:nth-child(2) {
 .main-bio {
 	box-sizing: border-box;
 	padding: 10px;
+	padding-top: 150px;
     position: fixed;
     width: 100%;
+    height: 100%;
     text-align: center;
     background: rgba(255,255,255,0.6);
     z-index: -1;
-    margin-top: 150px;
+  
 }
 
 .footer-info {
@@ -220,9 +222,6 @@ h2 {
 		padding-right: 0px;
 	}
 
-	.main-bio {
-		padding-top: 150px;
-	}
 
 }
 	
