--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ span:nth-child(2) {
 	display: flex;
 	justify-content: space-between;
 	border-bottom: 1px solid #ff0000;
+	position: fixed;
+	width: 100%;
+	background-color: #ffffff;
+	z-index: 1;
 }
 
 .navbar-menu {
@@ -91,57 +95,55 @@ span:nth-child(2) {
 	color: #ff0000;
 }
 
-.main-content {
-	
-}
-
 .blur {
-	background: url("./img/handshake.png") no-repeat center center fixed;
+	background:  linear-gradient(
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.7)
+    ), url("./img/handshake.png") no-repeat center center fixed;
 	background-size: cover;
-    width: 100%;
-    height: 100%;
-    filter: blur(2px);
-    z-index: -2;
-    position: fixed;
+	height: 100vh;
 }
 
 .main-bio {
-	box-sizing: border-box;
-	padding: 10px;
-	padding-top: 150px;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background: rgba(255,255,255,0.6);
-    z-index: -1;
-  
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 .footer-info {
 	background-color: #ffffff;
 	width: 100%;
-	position: absolute;
-	bottom: 0;
 }
 
 h2 {
 	font-size: 30px;
 	text-transform: uppercase;
+	padding: 30px 10px;
+	margin: 0;
 }
 
 .profession {
 	font-size: 40px;
 	text-transform: uppercase;
+	padding: 20px 10px;
+	margin: 0;
+}
+
+.skills {
+	height: 100vh;
+	text-align: center;
+	font-size: 20px;
+	text-transform: uppercase;
+	display: flex;
 }
 
 .skill-list {
-	padding: 0;
-}
-
-.skill-list li {
-	padding: 10px;
-	list-style-type: none;
+	padding: 20px;
+	margin: auto;
+	line-height: 2.1;
+	max-width: 800px;
 }
 
 .social-icons {
@@ -220,6 +222,10 @@ h2 {
 
 	.navbar-menu-list li:last-child {
 		padding-right: 0px;
+	}
+
+	.skill-list {
+		font-size: 15px;
 	}
 
 
