--- a/style.css
+++ b/style.css
@@ -112,11 +112,6 @@ span:nth-child(2) {
 	text-align: center;
 }
 
-.footer-info {
-	background-color: #ffffff;
-	width: 100%;
-}
-
 h2 {
 	font-size: 30px;
 	text-transform: uppercase;
@@ -147,6 +142,36 @@ h2 {
 	line-height: 2.1;
 	max-width: 800px;
 	font-weight: 300;
+}
+
+.scroll-button {
+	display: flex;
+	justify-content: center;
+	font-size: 20px;
+	text-transform: uppercase;
+	font-weight: 300;
+	position: absolute;
+	bottom: 30px;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.scroll-button a {
+	display: flex;
+	flex-direction: column;
+	text-decoration: none;
+	color: #000000;
+}
+
+.fa-angle-double-down {
+	text-align: center;
+}
+
+/* footer */
+
+.footer-info {
+	background-color: #ffffff;
+	width: 100%;
 }
 
 .social-icons {
@@ -180,7 +205,7 @@ h2 {
 	box-sizing: border-box;
 }
 
-/* abouy content */
+/* about content */
 
 .about-content {
 	text-align: center;
@@ -276,6 +301,10 @@ h2 {
 	}
 
 	.skill-list {
+		font-size: 15px;
+	}
+
+	.scroll-button {
 		font-size: 15px;
 	}
 
