--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ span:nth-child(2) {
 }
 
 h2 {
-	font-size: 30px;
+	font-size: 40px;
 	text-transform: uppercase;
 	padding: 30px 10px;
 	margin: 0;
@@ -133,15 +133,27 @@ h2 {
 	text-align: center;
 	font-size: 20px;
 	text-transform: uppercase;
-	display: flex;
 }
 
 .skill-list {
 	padding: 20px;
-	margin: auto;
+	margin: 0 auto;
 	line-height: 2.1;
 	max-width: 800px;
 	font-weight: 300;
+}
+
+.skill-list.name {
+	margin: 0 auto;
+	font-weight: 600;
+	padding: 50px;
+}
+
+.skill-list.summary {
+	margin: 50px auto;
+	border-bottom: 1px solid #ff0000;
+	font-size: 15px;
+	letter-spacing: 5px;
 }
 
 .scroll-button {
@@ -177,7 +189,6 @@ h2 {
 .social-icons {
 	padding: 15px;
 	text-align: center;
-	border-top: 1px solid #ff0000;
 }
 
 .social-icons a {
@@ -213,7 +224,7 @@ h2 {
 }
 
 .about-info {
-	padding: 20px;
+	padding: 30px;
 	margin: auto;
 	line-height: 2.1;
 	max-width: 800px;
@@ -228,6 +239,7 @@ h2 {
 	text-align: center;
 	text-transform: uppercase;
 	list-style-type: none;
+	padding: 15px;
 }
 
 .offer-content li {
@@ -236,7 +248,8 @@ h2 {
 
 .offer-info {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
+	padding: 30px;
 }
 
 .offer-info-clients p {
@@ -254,6 +267,22 @@ h2 {
 	font-weight: 300;
 }
 
+.offer-info-clients li:hover {
+	border-bottom: 1px solid #ff0000;
+	cursor: auto;
+}
+
+/* contact content */ 
+
+.contact-info {
+	padding-top: 150px;
+	text-align: center;
+}
+
+.contact-paragraf {
+	text-transform: uppercase;
+	font-weight: 300;
+}
 
 @media screen and (max-width: 995px) {
 
@@ -300,8 +329,16 @@ h2 {
 		padding-right: 0px;
 	}
 
+	.skills {
+		height: 100%;
+	}
+
 	.skill-list {
 		font-size: 15px;
+	}
+
+	.skill-list.summary {
+		font-size: 10px;
 	}
 
 	.scroll-button {
@@ -322,13 +359,6 @@ h2 {
 	}
 
 
-}
-
-@media screen and (max-width: 320px) {
-
-	.skill-list {
-		margin-top: 85px;
-	}
 }
 	
 
